Changelog
=========

0.1.4 -
------------------

- Click to copy to clipboard.
  [ggozad]

0.1.3 - 2023-10-17
------------------

- Remove pydantic and as a result, the rust dependency & build in homebrew.
  [ggozad]

- Show discreet info on running model.
  [ggozad]

0.1.2 - 2023-10-17
------------------

- Ability to rename chats.
  [ggozad]

0.1.0 - 2023-10-15
------------------

- Initial release.
  [ggozad]